kubernetes/apps/flux-system/flux-instance/mcp/envoyconfig.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: mcp-disable-buffer
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: flux-mcp
  responseBuffer:
    disabled: true
  requestBuffer:
    disabled: true
  timeouts:
    requestTimeout: 0s
    interStreamIdleTimeout: 300s
