kubernetes/apps/flux-system/flux-instance/mcp/route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-mcp
spec:
  hostnames: ["flux-mcp.${DOMAIN1}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      # sectionName: https
  rules:
    - backendRefs:
        - name: flux-operator-mcp
          namespace: flux-system
          port: 9090
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: "Host"
                value: "flux-mcp.${DOMAIN1}"
